static/css/thankyou.css
html, body{
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	font-family: 'Open Sans', sans-serif;
	background-color: #019cd4;
  }

.thank-you {
	color: white;
	text-align: center;
	font-size: 5rem;
	font-weight: bolder;
}

*{
	-webkit-box-sizing:border-box;
	-moz-box-sizing:border-box;
	box-sizing:border-box;
  }
  
  body, html{
	font-family: 'Open Sans', sans-serif;
  }
  
  .container-email {
	width:600px;
	height:600px;
	background:#fff;
	margin:20px auto;
	border-radius:4px;
	text-align:center;
	position:relative;
	-moz-box-shadow: 0px 0px 28px rgba(0,0,0,.3);
	-webkit-box-shadow: 0px 0px 28px rgba(0,0,0,.3);
	 box-shadow: 0px 0px 28px rgba(0,0,0,.3);
	 overflow:hidden;
  }

  .one , .two{
	display:relative;
	height:600px;
	width:500px;
	margin:0;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, 0%);
	position:absolute;
	-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
	transition:         all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
  }
  
  .btn-email {
	margin: 0;
	position: relative;
	left: 50%;
	-ms-transform: translate(-50%, 0%);
	transform: translate(-50%, 0%);
  }

  .one{
	top:0;
	background:#fff;
	margin-top:20px;
  }
  
  .two{
	top:100px;
	background:#019cd4;
  }
  
  .two h3{
	color:#fff;
	padding-top:240px;
  }
  
  .container-email .logo-mail{
	  padding-left: 1rem;
	width:40%;
	height:auto;
	display:block;
	margin:20px auto;
  }
  
  .container-email .logo-mailbox {
	height:auto;
	display:block;
	margin:20px auto;
  }

  .one  .heading{
	color:#607d8b;
	text-transform:capitalize;
	font-size:30px;
	font-weight:900;
	margin-top:40px;
	text-align: center;
  }
  
  .container-email p{
	color: black;
	  font-size: 2rem;
  }
  
  input[type='text']{
	width:85%;
	height:60px;
	margin-top:20px;
	margin-bottom:20px;
	padding-bottom:-80px;
	border:none;
	border-bottom:3px solid #019cd4;
	overflow:auto;
	position:relative;
  }
  
  
  
  
  
  input[type='text']:active:focus,
  input[type='text']:focus,
  input[type='text']:hover{
	outline : none;
	font-size:20px;
  }
  
  
  
  input[type='text']:focus::-webkit-input-placeholder,
  input[type='text']:active:focus::-webkit-input-placeholder
  {
	font-size:12px;
	display:block;
	-webkit-transform:translateY(-20px);
	transform:translateY(-20px);
  }
  
  ::-webkit-placeholder{
	font-size:14px;
	color:#b7b7b7;
	text-transform:capitalize;
	-webkit-transform:translateY(0px);
	transform:translateY(0px);
	-webkit-transition: all .3s ease-in-out;
	transition: all .3s ease-in-out; 
  }
  
  ::placeholder{
	font-size:14px;
	color:#b7b7b7;
	text-transform:capitalize;
	-webkit-transform:translateY(0px);
	transform:translateY(0px);
	-webkit-transition: all .3s ease-in-out;
	transition: all .3s ease-in-out; 
  }
  
  .one  .btn{
	width:85%;
	background:#019cd4;
	padding:15px;
	border:none;
	border-radius:5px;
	font-size:14px;
	color:#fff;
	text-transform:capitalize;
	font-family: 'Open Sans', sans-serif;
  }
  
  .one  .btn:active:focus,
  .one  .btn:focus,
  .one  .btn:hover{
	outline : none;
  }
  
  .one .btn:hover{
	cursor:pointer;
  }
  
  .close{
	position:relative;
	top:0;
	left:0;
	display:block;
	cursor:pointer;
  }
  
  .close:before{
	content:"";
	position:absolute;
	top:-240px;
	right:50px;
	display:block;
	width:22px;
	height:3px;
	background:#fff;
	-webkit-transform:rotate(45deg);
	transform:rotate(45deg);
  }
  
  .close:after{
	content:"";
	position:absolute;
	top:-240px;
	right:50px;
	display:block;
	width:22px;
	height:3px;
	background:#fff;
	-webkit-transform:rotate(-45deg);
	transform:rotate(-45deg);
  }

